feat: update Oracle AI service; modify request body structure and change authentication header